# qua-platform.github.io

./: .gitignore  .gitmodules  CNAME  README.md  pyproject.toml  versions.json
0.1/: 404.html  (+3 more)
0.1/qm-qua-sdk/: CODEOWNERS  index.html  mypy.ini  pyproject.toml  pytest.ini
0.1/qm-qua-sdk/CHANGELOG/: index.html
0.1/qm-qua-sdk/benchmark/: config.py  conftest.py  test_benchmark.py
0.1/qm-qua-sdk/docs/: docs_intro_script.py  docs_intro_script_with_integration.py  generate_IQ_blobs.py  hello_qua.py  spec.json
0.1/qm-qua-sdk/docs/API_references/config_spec/: index.html
0.1/qm-qua-sdk/docs/API_references/octave_config/: index.html
0.1/qm-qua-sdk/docs/API_references/qm_api/: index.html
0.1/qm-qua-sdk/docs/API_references/qm_job_api/: index.html
0.1/qm-qua-sdk/docs/API_references/qm_manager_api/: index.html
0.1/qm-qua-sdk/docs/API_references/qm_octave/: index.html
0.1/qm-qua-sdk/docs/API_references/qua/: index.html
0.1/qm-qua-sdk/docs/API_references/queue/: index.html
0.1/qm-qua-sdk/docs/API_references/results_api/: index.html
0.1/qm-qua-sdk/docs/API_references/simulator_api/: index.html
0.1/qm-qua-sdk/docs/Guides/: ExternalClkCharOPTout.csv  analog_input.drawio  index.html  output_filter_opx.drawio  waveform_report_example.html
0.1/qm-qua-sdk/docs/Guides/analog_input_stage/: index.html
0.1/qm-qua-sdk/docs/Guides/best_practices/: index.html
0.1/qm-qua-sdk/docs/Guides/demod/: index.html
0.1/qm-qua-sdk/docs/Guides/error/: index.html
0.1/qm-qua-sdk/docs/Guides/external_clock/: index.html
0.1/qm-qua-sdk/docs/Guides/external_trigger/: index.html
0.1/qm-qua-sdk/docs/Guides/features/: index.html
0.1/qm-qua-sdk/docs/Guides/multi-users/: index.html
0.1/qm-qua-sdk/docs/Guides/octave/: index.html
0.1/qm-qua-sdk/docs/Guides/output_filter/: index.html
0.1/qm-qua-sdk/docs/Guides/phase_and_frame/: index.html
0.1/qm-qua-sdk/docs/Guides/qua_ref/: index.html
0.1/qm-qua-sdk/docs/Guides/simulator/: index.html
0.1/qm-qua-sdk/docs/Guides/stream_proc/: index.html
0.1/qm-qua-sdk/docs/Guides/timing_in_qua/: index.html
0.1/qm-qua-sdk/docs/Guides/variables/: index.html
0.1/qm-qua-sdk/docs/Hardware/: backpanelOPX.csv  backpanelOPX_no_gt.csv  backpanelOPXp.csv  index.html  multi_OPX+_installation_components.csv  octave_front.csv  opx+installation.rst  port_connectivity.csv  screen1.jfif
0.1/qm-qua-sdk/docs/Hardware/OPX_hardware/: index.html
0.1/qm-qua-sdk/docs/about_doc/: index.html
0.1/qm-qua-sdk/docs/extensions/: googleanalytics.py
0.1/qm-qua-sdk/docs/legal/: index.html
0.1/qm-qua-sdk/docs/safety/: index.html
0.1/qm-qua-sdk/docs/support/: index.html
0.1/qm-qua-sdk/proto/: buf.yaml
0.1/qm-qua-sdk/qm/: QmJob.py  QmPendingJob.py  QmQueue.py  QuaNodeVisitor.py  QuantumMachine.py  QuantumMachinesManager.py  StreamMetadata.py  _QmJobErrors.py  __init__.py  _controller.py  _loc.py  _pretty_errors.py  _python_to_pb.py  _report.py  _results.py  capabilities.py  datadog_api.py  elements_db.py  exceptions.py  logger.py  logging_utils.py  persistence.py  quantum_machines_manager.py  singleton.py  user_config.py  utils.py  waveform_report.py
0.1/qm-qua-sdk/qm/api/: async_thread.py  base_api.py  frontend_api.py  info_service_api.py  job_manager_api.py  job_result_api.py  server_detector.py  simulation_api.py
0.1/qm-qua-sdk/qm/communication/: http_redirection.py
0.1/qm-qua-sdk/qm/containers/: capabilities_container.py
0.1/qm-qua-sdk/qm/elements/: basic_element.py  element_with_octave.py  native_elements.py
0.1/qm-qua-sdk/qm/jobs/: base_job.py  job_queue.py  pending_job.py  running_qm_job.py  simulated_job.py
0.1/qm-qua-sdk/qm/octave/: __init__.py  _calibration_config.py  _calibration_program.py  calibration_db.py  enums.py  octave_config.py  octave_manager.py  qm_octave.py
0.1/qm-qua-sdk/qm/program/: ConfigBuilder.py  StatementsCollection.py  _Program.py  _ResultAnalysis.py  __init__.py  _execution_overrides_schema.py  _qua_config_schema.py  _qua_config_to_pb.py  _validate_config_schema.py  expressions.py  program.py
0.1/qm-qua-sdk/qm/qua/: AnalogMeasureProcess.py  __init__.py  _dsl.py  _type_hinting.py  lib.py
0.1/qm-qua-sdk/qm/results/: __init__.py  base_streaming_result_fetcher.py  multiple_streaming_result_fetcher.py  simulator_samples.py  single_streaming_result_fetcher.py  streaming_result_fetcher.py
0.1/qm-qua-sdk/qm/serialization/: expression_serializing_visitor.py  generate_qua_script.py  qua_node_visitor.py  qua_serializing_visitor.py
0.1/qm-qua-sdk/qm/simulate/: __init__.py  credentials.py  interface.py  loopback.py  quantum.py  raw.py
0.1/qm-qua-sdk/qm/type_hinting/: config_types.py  simulator_types.py
0.1/qm-qua-sdk/qm/utils/: async_utils.py  deprecation_utils.py  general_utils.py
0.1/qm-qua-sdk/tests/: conftest.py  test_capabilities.py  test_deprecations.py  test_program_errors.py  test_user_config.py  test_versions_match.py
0.1/qm-qua-sdk/tests/config_validation/: test_controller_schema.py  test_element_schema.py  test_skip_marshmallow_validation.py
0.1/qm-qua-sdk/tests/gateway_mock/: base_responses.py  gateway_mock.py
0.1/qm-qua-sdk/tests/octave/: test_calibration_db.py  test_calibration_db_existing.py  test_octave_config.py  test_octave_manager.py
0.1/qm-qua-sdk/tests/serialization/: sample_config.py  test_config_serialization.py  test_qua_visitor.py
0.1/qm-qua-sdk/tests/simulate/: config.py  opx_config.py  physical_configs.py
0.1/qm-qua-sdk/tests/test_api/: test_base_api.py  test_frontend_api.py  test_job_manager.py
0.1/qm-qua-sdk/tests/test_qm/: conftest.py  test_io_values.py
0.1/qm-qua-sdk/tests/test_qmm/: conftest.py  test_config_validation.py
0.1/qm-qua-sdk/tests_against_server/: conftest.py  gatewayConfiguration.json  gatewayConfigurationQop1.json  test_compiler_params.py  test_getting_debug_data.py  test_numpy_input.py  test_opening_qmm.py  test_qm_api.py  test_result_handles.py  test_waveform_report.py
0.1/qm-qua-sdk/tests_against_server/octave/: test_octave.py  test_octave_config.py
0.1/qm-qua-sdk/tests_against_server/stream_processing/: configuration_basic.py  test_demodulation.py
(+631 files in other folders)
