[tool.poetry]
name = "QM unified documentation and resources"
version = "0.1.0"
description = ""
authors = ["Nikola Sibalic <nikola@quantum-machines.co>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
mkdocs = "^1.3.0"
lightgallery = "^0.5"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"
mike = "^1.1.2"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
pymdown-extensions = "^10.2"
Markdown = "3.3.7"
Pillow = "^9.2.0"
CairoSVG = "^2.5.2"
mkdocs-glightbox = "^0.3.0"
mkdocs-exclude = "^1.0.2"
qm-qua = {path = "./docs/docs/qm-qua-sdk", develop=true}
mkdocs-macros-plugin = "^0.7.0"
mkdocs-material = "^9.5.17"
pip = "^22.3.1"
install = "^1.3.5"
mkdocs-git-committers-plugin-2 = "^1.1.1"
mkdocs-table-reader-plugin = "^1.2"
matplotlib = "^3.6.3"
poethepoet = "^0.18.1"
urllib3 = "^1.26.15"

[tool.poetry.dev-dependencies]

[tool.poe.tasks]

[tool.poe.tasks.generate-grpc]
cmd = "poetry run poe generate-grpc"
help = "Generate gRPC python files"

[tool.poe.tasks.generate-docs]
cmd = "poetry run mkdocs serve"

[tool.poe.tasks.deploy]
cmd = "poetry run mike deploy --push --update-aliases 0.1 latest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
